Finish basic auth